[gd_scene load_steps=14 format=3 uid="uid://do6gwn47eylu7"]

[ext_resource type="Script" uid="uid://sbmng0cirge2" path="res://scripts/combat_scene.gd" id="1_3ou8c"]
[ext_resource type="FontFile" uid="uid://mmnf6x0iyi0y" path="res://assets/Gravity-Book.otf" id="3_cmui4"]
[ext_resource type="Script" uid="uid://d0udq0kgc2102" path="res://scripts/combat_manager.gd" id="4_ucgqt"]
[ext_resource type="PackedScene" uid="uid://sdwnoh61gawa" path="res://scenes/reusables/skill_info.tscn" id="5_2x1un"]
[ext_resource type="FontFile" uid="uid://ca0ii6rndnaqf" path="res://assets/pokemon_pixel_font.ttf" id="5_wtw4i"]
[ext_resource type="PackedScene" uid="uid://rtk527cyr7kb" path="res://scenes/reusables/combat_currency.tscn" id="6_b6b3n"]
[ext_resource type="PackedScene" uid="uid://cb1kmohoelulf" path="res://scenes/reusables/enemy_combat_currency.tscn" id="6_uo10a"]
[ext_resource type="Texture2D" uid="uid://bsae24ot6vmo6" path="res://assets/battle_bg.jpg" id="7_qh8p2"]
[ext_resource type="PackedScene" uid="uid://ydkggenx6prk" path="res://scenes/reusables/result_screen.tscn" id="8_xw3f4"]
[ext_resource type="Script" uid="uid://ywsxina60jdl" path="res://scripts/ReactionManager.gd" id="10_cmui4"]

[sub_resource type="LabelSettings" id="LabelSettings_mo5rj"]
font = ExtResource("3_cmui4")
font_size = 90

[sub_resource type="LabelSettings" id="LabelSettings_g8qlp"]
font = ExtResource("5_wtw4i")
font_size = 61
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rfbdu"]
font_size = 61
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="Combat" type="Node2D" groups=["combat"]]
script = ExtResource("1_3ou8c")

[node name="CombatManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_ucgqt")

[node name="TurnText" type="Label" parent="CombatManager"]
offset_left = 829.0
offset_top = 25.0
offset_right = 1035.0
offset_bottom = 92.0
text = "Ally Turn"
label_settings = SubResource("LabelSettings_mo5rj")

[node name="TargetingLabel" type="Label" parent="CombatManager"]
visible = false
offset_left = 39.0
offset_top = 697.0
offset_right = 439.0
offset_bottom = 865.0
text = "Choosing target for :

(click on the sprite)"
label_settings = SubResource("LabelSettings_g8qlp")

[node name="TargetingControls" type="Label" parent="CombatManager/TargetingLabel"]
layout_mode = 0
offset_left = 706.0
offset_top = -14.0
offset_right = 1046.0
offset_bottom = 211.0
text = "1  or Z for Enemy 1
2  or X for Enemy 2
3  or C for Enemy 3
4  or V for Enemy 4"
label_settings = SubResource("LabelSettings_rfbdu")

[node name="CombatCurrency" parent="CombatManager" instance=ExtResource("6_b6b3n")]

[node name="TargetingSkillInfo" parent="CombatManager" instance=ExtResource("5_2x1un")]
visible = false
offset_left = 491.0
offset_top = 678.0
offset_right = 491.0
offset_bottom = 678.0

[node name="EnemyCombatCurrency" parent="CombatManager" instance=ExtResource("6_uo10a")]
offset_left = 1686.0
offset_top = 2.0
offset_right = 1686.0
offset_bottom = 2.0

[node name="Enemy 1 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1020, 244)

[node name="Enemy 2 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1243, 244)

[node name="Enemy 3 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1468, 244)

[node name="Enemy 4 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1691, 244)

[node name="EndTurn" type="Button" parent="."]
offset_left = 1521.0
offset_top = 800.0
offset_right = 1681.0
offset_bottom = 837.0
theme_override_font_sizes/font_size = 56
text = "End Turn   (A)"

[node name="Win" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
offset_left = 1131.0
offset_top = 1024.0
offset_right = 1219.0
offset_bottom = 1074.0
theme_override_font_sizes/font_size = 36
text = "win"

[node name="ResetChoices" type="Button" parent="."]
offset_left = 450.0
offset_top = 999.0
offset_right = 703.0
offset_bottom = 1057.0
scale = Vector2(0.705, 0.705)
theme_override_font_sizes/font_size = 56
text = "Reset Choices"

[node name="VictoryScreen" parent="." node_paths=PackedStringArray("combat_manager") instance=ExtResource("8_xw3f4")]
visible = false
offset_left = 1230.0
offset_top = 288.0
offset_right = 1230.0
offset_bottom = 288.0
mouse_filter = 2
combat_manager = NodePath("../CombatManager")

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.411)
z_index = -5
position = Vector2(963, 539.5)
scale = Vector2(1.6798, 1.703)
texture = ExtResource("7_qh8p2")

[node name="ReactionManager" type="Node" parent="."]
script = ExtResource("10_cmui4")

[connection signal="pressed" from="EndTurn" to="CombatManager" method="_on_end_turn_pressed"]
[connection signal="pressed" from="Win" to="." method="_on_win_pressed"]
[connection signal="pressed" from="ResetChoices" to="CombatManager" method="_on_reset_choices_pressed"]
